add link to REAME

--- a/.github/ISSUE_TEMPLATE/no_blahaj.yml
+++ b/.github/ISSUE_TEMPLATE/no_blahaj.yml
@@ -1,7 +1,7 @@
 name: Delete Blåhaj
 description: Delete a Blåhaj from here
 title: "[DELETE]: "
-labels: [request, delete]
+labels: [delete]
 assignees:
   - td00
 body:
